<resources>
    <string name="app_name">iCTSV</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_item_fab_search">Sự kiện có thể bạn quan tâm</string>
    <string name="menu_item_fab_add_new">Tạo mới sự kiện</string>
    <string name="proof">Minh Chứng</string>
    <string name="point">Điểm</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="logout">Đăng xuất</string>
    <string name="user_criteria">Điểm đánh giá</string>


    <string name="type_language">vn</string>
    <string name="fill_title">Nhập tiêu đề</string>
    <string name="sv_group_by_id_title">Thông tin nhóm</string>
    <string name="event">Sự kiện</string>
    <string name="organizer">Người tổ chức</string>
    <string name="add_notifi">Thêm thông báo</string>
    <string name="add_desc">Thêm mô tả</string>
    <string name="add_location">Thêm địa điểm</string>
    <string name="g_type">Loại tổ chức</string>
    <string name="invite">Mời mọi người</string>
    <string name="all_day">Cả ngày</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Đăng nhập</string>
    <string name="activity_list_by_user_unit_title">Các hoạt động bạn có thể biết</string>
    <string name="activity_detail_by_user_unit_title">Thông tin hoạt động</string>
    <string name="user_info_title">Thông tin cá nhân</string>
    <string name="title_activity_maps">Map</string>

    <string name="error_db_text">Có lỗi xảy ra</string>
    <string name="error_network_text">Kiểm tra lại kết nối mạng</string>
    <string name="error_token_text">Hết hạn phiên đăng nhập</string>
    <string name="retry">Thử lại</string>
    <string name="loading_handle">Đang xử lý</string>
    <string name="check_in_success">CheckIn thành công</string>
    <string name="the_location_is_not_available">Vị trí chưa sẵn sàng</string>
    <string name="fullname_title"><![CDATA[Họ & tên]]></string>
    <string name="email_title">Email</string>
    <string name="gift_title">Quà tặng</string>
    <string name="receive_gift_address">Địa chỉ nhận quà</string>
    <string name="gift_name_hint">Tên phần quà</string>
    <string name="gift_type_hint">Loại quà tặng</string>
    <string name="gift_quantity_hint">Số lượng</string>
    <string name="gift_deadline_hint">Hạn đăng kí</string>
    <string name="gift_description_hint">Mô tả quà tặng</string>
    <string name="gift_address_hint">Địa chỉ nhận quà</string>
    <string name="date_start_hint">Ngày bắt đầu</string>
    <string name="time_start_hint">Giờ bắt đầu</string>
    <string name="time_end_hint">Giờ kết thúc</string>
    <string name="date_end_hint">Ngày kết thúc</string>
    <string name="email_hint">Email</string>
    <string name="phone_hint">Số điện thoại</string>
    <string name="link_hint">Link facebook/zalo</string>
    <string name="create_gift_button">Tạo quà tặng</string>
    <string name="delete_button">Xoá</string>
    <string name="update_info_button">Cập nhật thông tin</string>
    <string name="cancel_button_default">Huỷ</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="email">Email</string>
    <string name="live_place">Loại nơi ở</string>
    <string name="province_city">Tỉnh/TP</string>
    <string name="qu_n_huy_n">Quận/Huyện</string>
    <string name="ph_ng_x">Phường/Xã</string>
    <string name="t_a">Tọa độ</string>
    <string name="address">Địa chỉ</string>
    <string name="save">Lưu</string>
    <string name="gi_i_thi_u_ng_n_g_n">Giới thiệu ngắn gọn</string>
    <string name="x_c_nh_n_t_ng_qu">Xác nhận tặng quà</string>
    <string name="ti_u_ch_ng_v_i_ho_t_ng">Tiêu chí ứng với hoạt động</string>
    <string name="th_ng_tin_sinh_vi_n">Thông tin sinh viên</string>
    <string name="h_v_t_n">Họ và tên</string>
    <string name="aaa">aaa</string>
    <string name="m_s_sinh_vi_n">Mã số sinh viên</string>
    <string name="h_nh_th_c_nh_n_gi_y_t">Hình thức nhận giấy tờ</string>
    <string name="a_ch">Địa chỉ</string>
    <string name="ho_n_t_t_ng_k">Hoàn tất đăng kí</string>
    <string name="giao_n_a_ch_n_y">Giao đến địa chỉ này</string>
    <string name="l_u_13_i_m">Lưu, 13 điểm</string>
    <string name="ho_t_ng_minh_ch_ng">Hoạt động minh chứng</string>
    <string name="ghi_ch">Ghi chú</string>
    <string name="ho_n_th_nh">Hoàn thành</string>
    <string name="hu">Huỷ</string>
    <string name="_0_0">0/0</string>
    <string name="syns_text">Đồng bộ</string>

<!--    Toolbar title-->
    <string name="fragment_motel_registration_list">"Đăng kí tìm trọ"</string>
    <string name="fragment_motel_registration_info">"Thông tin đăng kí"</string>
    <string name="delete">Xoá</string>
</resources>
