<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
                name="status"
                type="com.bk.ctsv.common.Status" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            tools:context=".ui.fragments.form.ChooseDeliveryTypeFragment">

        <LinearLayout
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:layout_marginTop="32dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColorPrimary"
                    android:text="@string/th_ng_tin_sinh_vi_n"
                    android:textSize="16sp"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/studentNameTil"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:hint="@string/h_v_t_n"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:text="@string/aaa"
                        android:focusable="false"
                        android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/studentIdTil"
                    android:layout_marginTop="8dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:hint="@string/m_s_sinh_vi_n"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:focusable="false"
                        android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColorPrimary"
                    android:text="@string/h_nh_th_c_nh_n_gi_y_t"
                    android:textSize="16sp"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/deliveryTypeTil"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:hint="@string/h_nh_th_c_nh_n_gi_y_t"
                    android:layout_marginTop="4dp"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:endIconDrawable="@drawable/ic_arrow_down"
                    app:endIconMode="custom"
                    app:boxCornerRadiusTopEnd="8dp"
                    android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:focusable="false"
                        android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:visibility="gone"
                    android:id="@+id/addressTil"
                    android:layout_marginTop="8dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:hint="@string/a_ch"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:endIconDrawable="@drawable/ic_arrow_down"
                    app:endIconMode="custom"
                    android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:focusable="false"
                        android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                    android:visibility="gone"
                    android:id="@+id/noteTextView"
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/done"
                    android:textSize="12sp"/>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/doneButton"
                    app:cornerRadius="8dp"
                    android:layout_width="match_parent"
                    android:text="@string/ho_n_t_t_ng_k"
                    android:textAllCaps="false"
                    android:layout_height="56dp"/>
        </LinearLayout>

        <include
                app:status="@{status}"
                layout="@layout/loading_action_state"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>