<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
                name="gift"
                type="com.bk.ctsv.models.entity.gift.Gift" />
        <variable
                name="status"
                type="com.bk.ctsv.common.Status" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:id="@+id/linearLayout16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="12dp"
                    app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputLayout
                        style="@style/MainTextLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:hint="@string/fullname_title"
                        app:boxBackgroundColor="@color/mainBackground">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/fullNameText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        style="@style/MainTextLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:enabled="false"
                        android:hint="@string/email_title"
                        app:boxBackgroundColor="@color/mainBackground">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/emailText"
                            android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        style="@style/MainTextLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:enabled="false"
                        android:hint="@string/gift_title"
                        app:boxBackgroundColor="@color/mainBackground">

                    <com.google.android.material.textfield.TextInputEditText
                            android:text="@{gift.name}"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/reasonLayout"
                        style="@style/MainTextLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:hint="Vì sao phần quà này phù hợp với bạn?"
                        tools:ignore="HardcodedText">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/reasonText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="5" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                        goneUnless="@{gift.deliveryEnable == 1}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:orientation="vertical">

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/receive_gift_address"
                            android:textColor="@color/textColorPrimary"
                            android:textSize="16sp" />

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="(Quà tặng sẽ được gửi tới bạn qua địa chỉ này)"
                            android:textSize="11sp"
                            tools:ignore="HardcodedText" />

                    <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/pickAddressLayout"
                            style="@style/MainTextLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:hint="Địa chỉ nhận quà"
                            app:endIconDrawable="@drawable/ic_arrow_right"
                            app:endIconMode="custom"
                            tools:ignore="HardcodedText">

                        <com.google.android.material.textfield.TextInputEditText
                                android:focusable="false"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/applyButton"
                    style="@style/MainButton"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginBottom="12dp"
                    android:text="Đăng kí nhận quà"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="HardcodedText" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--        <include-->
        <!--                app:status="@{status}"-->
        <!--                layout="@layout/loading_action_state"/>-->
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>